# mcp-server-fetch-save

./: README.md  pyproject.toml
src/mcp_server_fetch_save/: __init__.py  __main__.py  server.py
src/mcp_server_fetch_store/: server.py
