[project]
name = "mcp-server-fetch-save"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to fetch web content, convert, and save to file for usage by LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }, { name = "Greg Berns" }]
maintainers = [{ name = "Greg Berns", email = "gregberns@gmail.com" }]
keywords = ["http", "os", "file", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "httpx<0.28",
  "markdownify>=0.13.1",
  "mcp[cli]>=1.1.3",
  "protego>=0.3.1",
  "pydantic>=2.0.0",
  "readabilipy>=0.2.0",
  "requests>=2.32.3",
]

[project.scripts]
mcp-server-fetch-save = "mcp_server_fetch_save:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
